# vulnscout

./: .env.example  .gitignore  Dockerfile  LICENSE  README-zh.md  README.md  docker-compose.yml  pyproject.toml  vulnscout_test.db-journal
.pi/todos/: 0744d1fa.md  15a7d4c8.md  281f241a.md  34e93a35.md  8b1af3e9.md  ac9225a3.md  bfa5a15d.md  dca2c795.md  f758fd61.md  fee0e212.md
docs/: COMPLETION_REPORT.md
docs/superpowers/specs/: 2026-05-16-vulnscout-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  scans.ts
frontend/src/components/: DiffViewer.tsx  Header.tsx  Layout.tsx  SeverityBadge.tsx
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/pages/: Dashboard.tsx  NewScan.tsx  ScanResult.tsx  VulnDetail.tsx
tests/: conftest.py  test_cli.py  test_detector.py  test_model_manager.py  test_models.py  test_report_formatter.py
tests/test_api/: test_scans.py
tests/test_scanner/: test_analyzer.py  test_chunker.py  test_code_fetcher.py  test_dedup.py  test_language_detector.py
vulnscout/: cli.py  main.py
vulnscout/api/: github.py  patches.py  router.py  scans.py  ws.py
vulnscout/core/: config.py  detector.py  i18n.py  model_manager.py
vulnscout/models/: __init__.py  db.py  schemas.py
vulnscout/scanner/: __init__.py  analyzer.py  chunker.py  code_fetcher.py  dedup.py  language_detector.py  patch_generator.py  pipeline.py
vulnscout/utils/: github_integration.py  report_formatter.py
vulnscout/worker/: celery_app.py
(+1 files in other folders)
